ltr-ejb/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ltr-ejb
  labels:
    name: ltr-ejb
    app: land-title-registry
    component: ejb-module
